--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* :root {
+    --light: #eee;
+    --dark: #342F4E;
+    --darker: #262336;
+    --blue: #61DAFB;
+    --crimson: #DB3052;
+  } */
